kubernetes/home/apps/default/home-assistant/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home-assistant.shaklab.com`, `hass.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: shaklab-com-tls-certs
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vscode
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass-vscode.shaklab.com`, `hass-code.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: home-assistant-addon-codeserver
          port: 12321
  tls:
    secretName: shaklab-com-tls-certs
